--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ main {
     display: flex;
 }
 
-.left div:not(:last-of-type, :first-of-type, :nth-of-type(5)) {
+.left div:not(:last-of-type, :first-of-type, :nth-of-type(4)) {
     border-bottom: 2px solid rgb(71, 51, 13);
 }
 
@@ -50,7 +50,7 @@ main {
     margin-top: auto;
 }
     
-.contact, .links {
+.contact {
     padding: 30px 10px;
 }
 .programmingskillstitle {
@@ -65,14 +65,14 @@ main {
     background-color: #b7b6b6;
     box-shadow: 8px 8px 6px 0 rgba(0, 0, 0, 0.2);
     border-radius: 70px;
-    padding: 5vw;
+    padding: 3vw;
     border: solid 2px rgb(53, 53, 53)
  }
  .right div ul {
      padding-left: 2vw;
  }
  .right div {
-    padding:10px 0px;
+    padding:20px 0px;
 }
  
  .aboutme p {
@@ -90,14 +90,12 @@ padding-left: 2vw;
  .programmingskills img{
 margin:10px;
  }
- .rightarticle:hover, .skillpoints:hover, .goals:hover {
+ .rightarticle li:hover, .rightarticle p:hover, .goals p:hover {
     font-size: larger;
-     text-shadow: 1px 1px 1px;
      cursor: default;
  }
- .left .contact:hover, .links a:hover, .programmingskillstitle:hover {
+ .left .contact a:hover, .left .contact p:hover {
     font-size: larger;
-    text-shadow: 1px 1px 1px;
     cursor: default;
  }
 
@@ -107,11 +105,11 @@ margin:10px;
  .skills {
      display: flex;
  }
+ .experience {
+    padding-bottom: 10px;
+ }
  .skills .goals, .skillpoints {
      flex:1;
- }
- .felsorolas ul {
-     padding-left: 2vw;
  }
 
  @media screen and (max-width: 820px) {
